--- a/requirements.txt
+++ b/requirements.txt
@@ -6,24 +6,24 @@ wheel>=0.29
 
 # data science
 numpy
-pandas
-scikit-learn
+#pandas
+#scikit-learn
 
 # tests/linter
 black
 coverage
-flake8
+#flake8
 pytest
-yapf
+#yapf
 
 # API
-gcsfs
-google-cloud-storage
-mlflow
-s3fs
+#gcsfs
+#google-cloud-storage
+#mlflow
+#s3fs
 
 # utilities
 six>=1.14
-joblib
-memoized-property
+#joblib
+#memoized-property
 termcolor
